# Finding-similar-photos

./: .gitignore  pyproject.toml
src/: search_for_similar.py  similarity.py
tests/: test_similarity.py
