[project]
name = "image-similarity"
version = "0.1.0"
description = "Find similar images."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=11.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
package = false
exclude-newer = "2026-06-05T00:00:00Z"
